--- a/daml.yaml
+++ b/daml.yaml
@@ -2,9 +2,9 @@
 # https://docs.daml.com/tools/assistant.html#project-config-file-daml-yaml
 
 sdk-version: 2.8.3
-name: functions
+name: damlexamples
 source: daml
-init-script: Main:setup
+#init-script: Main:testBankService
 version: 0.0.1
 dependencies:
   - daml-prim
